@@ -57,7 +57,14 @@ struct rtems_bsdnet_config rtems_bsdnet_config = {
   "nodomain.com",      /* Domain name */
   "127.0.0.1",         /* Gateway */
   "127.0.0.1",         /* Log host */
-  {"127.0.0.1"  },     /* Name server(s) */
+  {"127.0.0.1" },      /* Name server(s) */
+  {"127.0.0.1" },      /* NTP server(s) */
+  0,                   /* sb_efficiency */
+  0,                   /* udp_tx_buf_size */
+  0,                   /* udp_rx_buf_size */
+  0,                   /* tcp_tx_buf_size */
+  0                    /* tcp_rx_buf_size */
+
 };
 
 /*
