@@ -1,3 +1,7 @@
+2008-08-20	Joel Sherrill <joel.sherrill@OARcorp.com>
+
+	* networkconfig-qemu.h, networkconfig.h: Add missing initializers.
+
 2008-02-05	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* networkconfig-icecube.h, networkconfig-qemu.h, networkconfig.h:
